fix: address code review feedback - setId, UUID uniqueness, List.of consistency
Agent-Logs-Url: https://github.com/manoharaurala/ParkingLotLLD/sessions/d3c9012f-6912-4e7b-9714-a51f4e3ddddb

Co-authored-by: manoharaurala <27153344+manoharaurala@users.noreply.github.com>